--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_notes">Nota</string>
     <string name="title_favorites">Favoritas</string>
     <string name="title_profile">Mi Perfil</string>
+    <string name="action_add_nota">Nueva Nota</string>
 </resources>
